testdata/baselines/reference/submodule/compiler/classFieldSuperAccessibleJs1.errors.txt
index.js(6,17): error TS8010: Type annotations can only be used in TypeScript files.


==== index.js (1 errors) ====
    class C {
      static blah1 = 123;
    }
    C.blah2 = 456;
    
    class D extends C {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
      static {
        console.log(super.blah1);
        console.log(super.blah2);
      }
    }
    